--- a/WebClient/src/components/userProfilePanel/userProfilePanel.template.html
+++ b/WebClient/src/components/userProfilePanel/userProfilePanel.template.html
@@ -56,10 +56,10 @@
                 <li @click="redirectToManageServices" v-if="userRole === 1">
                     Manage Services
                 </li>
-                <li>
+                <li v-if="false">
                     Shop By Category
                 </li>
-                <li>
+                <li v-if="false">
                     Refer & Earn
                 </li>
                 <li @click="redirectToSupport">
