--- a/WebClient/src/content/scssStyles.scss
+++ b/WebClient/src/content/scssStyles.scss
@@ -4249,7 +4249,7 @@ table.table-bordered tbody tr:hover {
 }
 .profileDesig{
     margin-bottom:0px;
-   
+   width: 100%
 }
 .hearaa{
         margin-top:30px;
