--- a/WebClient/src/components/userModule/userProfileComponentVue/userProfileComponentVue.template.html
+++ b/WebClient/src/components/userModule/userProfileComponentVue/userProfileComponentVue.template.html
@@ -165,7 +165,7 @@
                                 </label>
                             </div>
                             <div class="form-group">
-                                <input type="password" class="form-control" placeholder="OTP"
+                                <input type="password" autocomplete="off" class="form-control" placeholder="OTP"
                                     v-model="otp">
                             </div>
                         </div>                  
