--- a/WebClient/src/components/customerModule/supportComponent/supportComponent.template.html
+++ b/WebClient/src/components/customerModule/supportComponent/supportComponent.template.html
@@ -57,9 +57,9 @@
             </div>
         </div>
         <div class="row flexStart">
-            <div class="col-md-12">
+            <div class="col-md-12" style="padding-top:0px">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-12" style="padding-top:0px">
                         <h5>For Customer Support</h5>
                     </div>                    
                 </div>
@@ -69,7 +69,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-12" style="padding-top:0px">
                         <h5>For Enquiry / Sales</h5>
                     </div>                    
                 </div>
