--- a/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
+++ b/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
@@ -62,8 +62,8 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="input-group">
-                            <input type="text" placeholder="Search Services..." class="form-control searchTextInput" v-model="SearchText">
-                            <button type="submit" class="button-holder"><i class="fa fa-search"></i></button>
+                            <input style="background:white" type="text" placeholder="Search Services..." class="form-control searchTextInput" v-model="SearchText">
+                            <button type="submit" class="button-holder btn-primary"><i class="fa fa-search" style="color:white"></i></button>
                         </div>
                         
                     </div>
