--- a/WebClient/src/components/myaccount/myProducts/myProducts.template.html
+++ b/WebClient/src/components/myaccount/myProducts/myProducts.template.html
@@ -8,7 +8,7 @@
             <h5 class="header-subscribe">Vehicles</h5>
         </span>
         <button class="btn btn-primary" style="float: right;" @click="openVehicleAddPopup">
-            Add
+            <span class="add-Btn-here">+</span> Add
         </button>
     </div>
     <div class="outer">
