--- a/WebClient/src/components/myaccount/mysubscriptions/mysubscriptions.template.html
+++ b/WebClient/src/components/myaccount/mysubscriptions/mysubscriptions.template.html
@@ -69,8 +69,8 @@
         <div class="row">
             <div class="col-3" style="text-align: center;">
                 <div>
-                    <div class="add-new-outer">
-                        <img :src="newbtn" style="height: 60px;">
+                    <div class="add-new-image">
+                        <img :src="newbtn" width='90%' height="88%">
                     </div>
                 </div>
             </div>
