--- a/WebClient/src/components/services/purchaseService/purchaseService.template.html
+++ b/WebClient/src/components/services/purchaseService/purchaseService.template.html
@@ -163,7 +163,7 @@
                     <quantityComponent :inputValue="vehicleInfo.Quantity" :updateParent="updateQuantity">
                     </quantityComponent>
                 </div>
-                <div class="form-group" v-if="serviceType == 2" style="padding: 2px;">
+                <div class="form-group" v-if="serviceType == 2" style="padding: 2px;padding-top:14px;">
                     <label>
                         Date
                     </label>
