--- a/WebClient/src/components/userProfilePanel/userProfilePanel.template.html
+++ b/WebClient/src/components/userProfilePanel/userProfilePanel.template.html
@@ -11,7 +11,7 @@
             </div>
         </div>
         <div class="row profile-name-ed">
-            <div class="cold-md-12" style="text-align: center; margin-top:-10px">
+            <div class="cold-md-12" style="text-align: center;">
                 <label class="" style="font-size: 25px; margin-bottom: 0px">Rs.
                     {{userWallet && userWallet.Amount != null ? userWallet.Amount : 'XXX.XX'}} /-</label>
             </div>
