--- a/WebClient/src/components/commonComponents/quantityComponent/quantityComponent.template.html
+++ b/WebClient/src/components/commonComponents/quantityComponent/quantityComponent.template.html
@@ -1,9 +1,9 @@
 <div class="quantityComponent">
-    <button class="minus-btn" style="margin-right: 0px; width:30px" type="button" name="button" @click="decrementQuantity" :disabled="disabled">
+    <button class="minus-btn" style="margin-right: 0px;" type="button" name="button" @click="decrementQuantity" :disabled="disabled">
         <i class="fa fa-minus-circle" aria-hidden="true"></i>
     </button>
     <input type="number" name="name" min="1" v-model="value" style="text-align: center;" :disabled="disabled">
-    <button class="plus-btn" style="width:30px" type="button" name="button" @click="incrementQuantity" :disabled="disabled">
+    <button class="plus-btn"  type="button" name="button" @click="incrementQuantity" :disabled="disabled">
         <i class="fa fa-plus-circle" aria-hidden="true"></i>
     </button>
 </div>
