Recharge in MyAccount with Paytm integration in progress

--- a/WebClient/src/components/myaccount/myWallet/myWallet.template.html
+++ b/WebClient/src/components/myaccount/myWallet/myWallet.template.html
@@ -1,14 +1,13 @@
 <div class="">
     <div>
-        <h4>My Wallet</h4>
+        <h4 v-if="!hideHeader">My Wallet</h4>
     </div>
     <div class="ResGrid">
         <div class="dTable">
             <table style="width: 100%; overflow:scroll;">
-                <thead>
+                <thead class="walletHeader">
                     <th>Transaction Date</th>
                     <th>Amount</th>
-                    <th>Credit/Withdraw</th>
                     <th>Transaction Type</th>                    
                 </thead>
                 <tbody class="myordersTable">
@@ -17,7 +16,7 @@
                         <td>{{returnDateTime(transaction.TransactionDate)}}</td>
                         <td>₹ {{transaction.Amount}}</td>
                         <td>{{transaction.IsCredited ? "Credited": "Debited"}}</td>
-                        <td> {{transaction.TransactionType}}</td>
+                        <!-- <td> {{transaction.TransactionType}}</td> -->
                     </tr>
 
                 </tbody>
