--- a/WebClient/src/components/userProfilePanel/userProfilePanel.template.html
+++ b/WebClient/src/components/userProfilePanel/userProfilePanel.template.html
@@ -18,7 +18,7 @@
         </div>
         <div class="row profile-name-ed">
             <div class="cold-md-12" style="text-align: center;">
-                <button class="btn btn-primary">Recharge</button>
+                <button class="btn btn-primary" @click="redirectToRecharge">Recharge</button>
             </div>
         </div>
         <div>
