--- a/WebClient/src/components/myaccount/myProducts/myProducts.template.html
+++ b/WebClient/src/components/myaccount/myProducts/myProducts.template.html
@@ -62,8 +62,8 @@
                 </div>
             </div>
             <div class="add-new-outer">
-                <button class="add-new" @click="openVehicleAddPopup">
-                    +
+                <button class="add-new" style="font-size: 20px" @click="openVehicleAddPopup">
+                 <i class="fa fa-plus"></i>
                 </button>
                 <div class='bold'>Add Vehicle</div>
             </div>
