issue fixed and IIS related changes added

--- a/WebClient/src/components/myaccount/mysubscriptions/mysubscriptions.template.html
+++ b/WebClient/src/components/myaccount/mysubscriptions/mysubscriptions.template.html
@@ -5,7 +5,7 @@
     <div v-if="subscriptions.length > 0" class="my-product-screen" v-for="product in subscriptions">
         <div class="row">
             <div class="col-5" style="padding-right: 0px;">
-                <img src="product.ServiceImage" height="100" width="100%" @click="showMoreInfo(service)">
+                <img :src="product.ServiceImage" height="100" width="100%" @click="showMoreInfo(service)">
             </div>
             <div class="col-7">
 
