--- a/WebClient/src/components/myaccount/reachargeComponent/reachargeComponent.template.html
+++ b/WebClient/src/components/myaccount/reachargeComponent/reachargeComponent.template.html
@@ -66,7 +66,7 @@
                     <div class="col-md-12">
                         <div class="form-group">
                             <label class="bold">Recharge History</label>
-                            <myWallet hideHeader="true"></myWallet>
+                            <myWallet hideHeader="true" :isWalletChanged="isWalletChanged"></myWallet>
                         </div>
                     </div>
                 </div>
