--- a/WebClient/src/components/customerModule/supportComponent/supportComponent.template.html
+++ b/WebClient/src/components/customerModule/supportComponent/supportComponent.template.html
@@ -79,5 +79,23 @@
                 </div>
             </div>
         </div>
+        <div class="row flexStart">
+            <div class="col-md-12" style="padding-top:0px">
+                <div class="row">
+                    <div class="col-md-12" style="padding-top:0px">
+                        <a href="https://cleanmycar.in/terms-and-conditions" target="_blank">Terms & Conditions</a>
+                        <a style="float: right;" href="https://cleanmycar.in/privacy-policy" target="_blank">Priacy Policy</a>
+                        
+                    </div>                    
+                </div>
+                <div class="row">
+                    <div class="col-md-12" style="padding-top:0px">
+                        
+                        <a href="https://cleanmycar.in/refund-policy" target="_blank">Refund Policy</a>
+                        <a style="float: right;" href="https://cleanmycar.in/faqs" target="_blank">FAQs</a>
+                    </div>                    
+                </div>
+            </div>
+        </div>
     </div>
 </div>
