--- a/WebClient/src/components/homeModule/adminHomePageComponent/adminHomePageComponent.template.html
+++ b/WebClient/src/components/homeModule/adminHomePageComponent/adminHomePageComponent.template.html
@@ -78,7 +78,7 @@
                                                 </td>
                                                 <td>{{service.ServiceName}}</td>
                                                 <!-- <td>{{returnDateTime(service.RequestedOn)}}</td> -->
-                                                <td>{{returnDateTime(service.ServiceDate)}}</td>
+                                                <td>{{returnServiceDateTime(service)}}</td>
                                                 <td>{{timeslots[service.TimeSlot]}}</td>
                                                 <td>{{service.SubscribeType ? service.SubscribeType : 'Once'}}</td>
                                                 <td v-if="false">₹
