--- a/WebClient/src/components/myaccount/userCartPanel/userCartPanel.template.html
+++ b/WebClient/src/components/myaccount/userCartPanel/userCartPanel.template.html
@@ -47,4 +47,5 @@
         <deleteConfirmationPopup :updateParent="callbackFromConfirmation" :isOpen="selectedIndex && selectedIndex > -1"
             headerTitle="'Please confirm before delete'" message="'Are you sure want to delete ?'"></deleteConfirmationPopup>
     </div>
+    <toastrMessageComponent v-if="isDialogOpen" :message="popupMessage" :headerTitle="headerTitle" :isOpen="isDialogOpen" :closeToastrPopup="closeToastrPopup"></toastrMessageComponent>
 </div>
