--- a/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
+++ b/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
@@ -42,8 +42,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <div>
-                                            {{serviceObj.ServiceDescription}}
+                                        <div v-html="serviceObj.ServiceDescription">
                                         </div>
                                     </div>
                                 </div>
@@ -86,8 +85,8 @@
                                     class="serviceCardImg" @click="showMoreInfo(service)" height="auto">
                             </div>
                             <div class="serviceName serv-pad">
-                                <p class="mt-3 inerhtml bold" style="font-size: 16px;">{{service.ServiceName}}<br></p>
-                                <span class="mt-3" style="font-weight: 500; font-size: 15px">Starting from ₹
+                                <p class="mt-3 inerhtml bold" style="font-size: 13px;">{{service.ServiceName}}<br></p>
+                                <span class="mt-3" style="display:none;font-weight: 500; font-size: 15px">Starting from ₹
                                     {{service.StartingPrice ? service.StartingPrice : service.Price}}/-</span>
                             </div>
                         </div>
@@ -95,11 +94,11 @@
                             <div class="form-group purchaseButton" style="padding: 5px;"
                                 @click="chooseOption(service, '1')" v-if="service.IsSubscriptionEnabled">
                                 <span class="">Subscribe @ ₹
-                                    {{service.StartingSubscriptionPrice ? service.StartingSubscriptionPrice : service.SubscriptionPrice}}/-</span>
+                                    {{service.StartingSubscriptionPrice ? service.StartingSubscriptionPrice : service.SubscriptionPrice}}/- *</span>
                             </div>
                             <div class="form-group purchaseButton" style="padding: 5px;"
                                 @click="chooseOption(service, '2')" v-if="service.IsPurchaseOnceEnabled">
-                                <span class="">Purchase Once</span>
+                                <span class="">Buy Once @ ₹ {{service.StartingPrice? service.StartingPrice : service.Price}}/- *</span>
                             </div>
                         </div>
                         </div>
@@ -114,7 +113,7 @@
 
                         <div class="cellrow ind">
                             <h5>{{serviceCategory.VehicleCategoryTypeName}}</h5>
-                            <span>View All</span>
+                            <span style="display: none;">View All</span>
                         </div>
                         <div class="cellrow res" style="overflow: scroll;">
                             <div v-if="serviceCategory.services.length > 0" class="cellCol respno"
@@ -126,8 +125,8 @@
                                         class="serviceCardImg" @click="showMoreInfo(service)" height="auto">
                                 </div>
                                 <div class="serviceName serv-pad">
-                                    <p class="mt-3 inerhtml bold" style="font-size: 16px;">{{service.ServiceName}}<br></p>
-                                    <span class="mt-3" style="font-weight: 500; font-size: 15px">Starting from ₹
+                                    <p class="mt-3 inerhtml bold" style="font-size: 13px;">{{service.ServiceName}}<br></p>
+                                    <span class="mt-3" style="display:none;font-weight: 500; font-size: 15px">Starting from ₹
                                         {{service.StartingPrice ? service.StartingPrice : service.Price}}/-</span>
                                 </div>
                             </div>
@@ -135,11 +134,12 @@
                                 <div class="form-group purchaseButton" style="padding: 5px;"
                                     @click="chooseOption(service, '1')" v-if="service.IsSubscriptionEnabled">
                                     <span class="">Subscribe @ ₹
-                                        {{service.StartingSubscriptionPrice ? service.StartingSubscriptionPrice : service.SubscriptionPrice}}/-</span>
+                                        {{service.StartingSubscriptionPrice ? service.StartingSubscriptionPrice : service.SubscriptionPrice}}/- *</span>
                                 </div>
                                 <div class="form-group purchaseButton" style="padding: 5px;"
                                     @click="chooseOption(service, '2')" v-if="service.IsPurchaseOnceEnabled">
-                                    <span class="">Purchase Once</span>
+                                    <!-- <span class="">Purchase Once</span> -->
+                                    <span class="">Buy Once @ ₹ {{service.StartingPrice? service.StartingPrice : service.Price}}/- *</span>
                                 </div>
                             </div>
                             </div>
