--- a/WebClient/src/components/myaccount/mysubscriptions/mysubscriptions.template.html
+++ b/WebClient/src/components/myaccount/mysubscriptions/mysubscriptions.template.html
@@ -12,19 +12,27 @@
                 <div class="bold">
                     {{product.ServiceName}}
                 </div>
+                <div>
+                    <span>
+                        <label>{{product.VehicleName}}</label>
+                    </span>
+                </div>
                 <div class="">
                     {{getFormattedDate(product.ServiceDate)}}
+                    <label class="my-products" style="float: right;">₹
+                        {{product.VehicleTypeId == 2 ? (product.ServiceType == 2 ? product.FourWheelerOncePrice : product.FourWheelerSubPrice) : (product.ServiceType == 2 ? product.Price : product.SubscriptionPrice )}}/-
+                    </label>
                 </div>
                 <div>
-                    <label class="my-products">₹
-                        {{product.VehicleTypeId == 2 ? (product.ServiceType == 2 ? product.FourWheelerOncePrice : product.FourWheelerSubPrice) : (product.ServiceType == 2 ? product.Price : product.SubscriptionPrice )}}
-                    </label>
                 </div>
                 <div>
                     <span class="bold">
                         {{product.SubscribeType}}
                     </span>
-                    <span> <label>{{product.VehicleName}}</label></span>
+                    <span v-if="product.Frequency == 2">
+                        {{product.DayName}}
+                    </span>
+
                 </div>
             </div>
         </div>
@@ -38,13 +46,14 @@
         </div>
         <div class="row" style="margin-top:8px">
             <div class="col-4">
-                <div  @click="opneModifyPopup(product)" style="cursor: pointer;">
+                <div @click="opneModifyPopup(product)" style="cursor: pointer;"
+                    v-if="product.ServiceStatusId == 1 || product.ServiceStatusId == 4">
                     <span class="pauseSubscribe"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> </span>
                     <span>Modify</span>
                 </div>
             </div>
             <div class="col-4">
-                <div  v-if="product.ServiceStatusId == 1 || product.ServiceStatusId == 4"
+                <div v-if="product.ServiceStatusId == 1 || product.ServiceStatusId == 4"
                     @click="addDetailsToPause(product)" style="cursor: pointer;">
                     <span class="pauseSubscribe"><i class="far fa-pause-circle"></i> </span>
                     <span>Pause</span>
@@ -198,7 +207,9 @@
                                     <div class="tabs-custom" v-for="product in subscriptionTypes"
                                         v-if="serviceDetail.serviceSubscribeTypes.indexOf(product.SubscribeId) > -1">
                                         <label class="radioLabel customradioLabel">
-                                            <button v-bind:class="['btn-default serviceName custom-bbtn', serviceObj.Frequency == product.SubscribeId ? 'active': '']"  @click="selectSubscribeType(product)">
+                                            <button
+                                                v-bind:class="['btn-default serviceName custom-bbtn', serviceObj.Frequency == product.SubscribeId ? 'active': '']"
+                                                @click="selectSubscribeType(product)">
                                                 {{product.SubscribeType}}
                                             </button>
                                         </label>
