--- a/WebClient/src/components/servicePersonComponents/servicePersonHomePageComponent/servicePersonHomePageComponent.template.html
+++ b/WebClient/src/components/servicePersonComponents/servicePersonHomePageComponent/servicePersonHomePageComponent.template.html
@@ -15,10 +15,18 @@
         </div>
         <div class="" v-for="product in servieList" style="border: 1px solid #65ff00">
             <div class="row">
-                <div class="col-md-8">
-                    {{product.OtherAddressId ? product.OtherAddressLine1 : product.AddressLine1}}
+                <div class="col-md-7">
+                    <span v-if="product.OtherAddressId">
+                        {{product.OtherAddressLine1 + ', ' +  product.OtherAddressLine2 }} <br>
+                        {{(product.OtherLandmark ? product.OtherLandmark+ ', ' : '' ) +  (product.OtherServiceCityName ? product.OtherServiceCityName : '') }}
+                    </span>
+                    <span v-else>
+                        {{ product.AddressLine1 + ', ' +  product.AddressLine2 }}<br>
+                        {{(product.Landmark ? product.Landmark+ ', ' : '' )+  (product.CityName ? product.CityName : '') }}
+                    </span>
                 </div>
-                <div class="col-md-2">
+
+                <div class="col-md-3">
                     {{timeslots[product.TimeSlot]}}
                 </div>
                 <div class="col-md-2">
@@ -34,7 +42,7 @@
                 </div>
                 <div class="col-md-4">
                     {{product.VehicleNumber}}
-                </div>                
+                </div>
             </div>
             <div class="row" v-if="product.OtherAddressId">
                 <div class="col-md-12">
@@ -101,7 +109,7 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col-md-12">
-                            
+
                             <div class="form-group">
                                 <label>Notes</label>
                                 <textarea v-model="selectedProduct.notes" rows="3" class="form-control"></textarea>
