--- a/WebClient/src/components/myaccount/reachargeComponent/reachargeComponent.template.html
+++ b/WebClient/src/components/myaccount/reachargeComponent/reachargeComponent.template.html
@@ -39,7 +39,7 @@
                             <div style="background-color: grey;">
                                 <span style="float: left;">Amount : ₹ {{rechargeAmount ? rechargeAmount : '0'}} /-
                                 </span>
-                                <span style="float: right; margin-left: 50px;" @click="rechargeWallet">Confirm</span>
+                                <button class="btn btn-primary btn-sm pull-right" style="font-size:15px;" @click="rechargeWallet">Confirm</button>
                             </div>
                         </div>
                     </div>
