--- a/WebClient/src/components/myaccount/vehicleAddComponent/vehicleAddComponent.template.html
+++ b/WebClient/src/components/myaccount/vehicleAddComponent/vehicleAddComponent.template.html
@@ -15,7 +15,7 @@
                         <div class="form-group">
 
                             <div class="col-md-12 searchResultsAmenitiesDiv">
-                                <input type="text" placeholder="Please type here to choose address..."
+                                <input style="font-size:14px;" type="text" placeholder="Please type here to choose address..."
                                     v-model.trim="searchAddressText" autocomplete="off" v-validate="'required'" name="addressId">                                    
                             </div>
                             <div class="form-control searchResultsAmenities" @click="$event.stopPropagation()"
