--- a/WebClient/src/components/homeModule/headerComponent/headerComponent.template.html
+++ b/WebClient/src/components/homeModule/headerComponent/headerComponent.template.html
@@ -4,7 +4,7 @@
             <div class="logoSection">
                 <a class="mainLogo">
                     <img src="src/content/images/cleanmycarep.png" width='70px' height="40px">
-                    <img style="position: absolute; left:34%; top:17px; margin:0px" width="30%" src="src/content/images/cleanImageText.jpeg">
+                    <img class="inline-logo"  width="150px" src="src/content/images/cleanImageText.jpeg">
                     <!-- <span v-if="selectedClientObj" class="">{{ClientName}}</span> -->
                     <!-- <span v-if="(selectedClientObj && selectedClientObj.ClientId === 1 && ClientId !== 1)"><button title="Client List" @click="showPropertyPanel"><i style="font-size:24px" class="fa">&#xf107;</i></button></span> -->
                 </a>
