--- a/WebClient/src/components/services/purchaseService/purchaseService.template.html
+++ b/WebClient/src/components/services/purchaseService/purchaseService.template.html
@@ -1,15 +1,13 @@
 <div v-if="serviceDetail" class="panel panel-default">
-    <div class="panel-heading">
+    <div class="panel-heading" style="padding-bottom:0px;">
         <span @click="navigateToBack" class="navigationIcon">
             <i class="fas fa-chevron-left"></i>
         </span>
         <h4 class="header-subscribe">{{serviceType == 1 ? "SUBSCRIBE" : "Service / Delivery Me Once"}}</h4>
     </div>
     <div class="panel-body addBg">
-        <div class="row">
-            <div class="col-md-12">
-
-
+        <div>
+            <div>
                 <div class="modal" data-backdrop="static" role="dialog" id="newVehicleDetailsPopup233">
                     <div class="modal-dialog" v-if="newVehicleDetails">
                         <div class="modal-content">
@@ -27,7 +25,7 @@
                                         <div class="form-group">
 
                                             <div class="col-md-12 searchResultsAmenitiesDiv">
-                                                <input type="text" placeholder="Please type here to choose address..."
+                                                <input type="text" style="font-size:14px;" placeholder="Please type here to choose address..."
                                                     v-model.trim="searchAddressText">
                                             </div>
                                             <div class="form-control searchResultsAmenities"
@@ -332,7 +330,7 @@
                     <div v-if="serviceDetail.VehicleCategoryType == 3 && userAddressList.length == 0">
                         You don't have any address to deliver this product, please add Address in <a href="javascript: void(0)" @click="navigateToMyProfile">My Profile</a> and confirm
                     </div>
-                    <div style="float: right;" v-if="userAddressList.length > 1">
+                    <div style="margin-top:25px;float: right;" v-if="userAddressList.length > 1">
                         <a href="javascript: void(0)" @click="choosePersonAddress">Change</a>
                     </div>
                 </div>
