--- a/WebClient/src/components/homeModule/adminHomePageComponent/assignPersonComponent/assignPersonComponent.template.html
+++ b/WebClient/src/components/homeModule/adminHomePageComponent/assignPersonComponent/assignPersonComponent.template.html
@@ -12,6 +12,6 @@
         </ul>
     </div>
     <div>
-        <button class="btn btn-success" @click="assignService">Assign</button>
+        <button class="btn btn-success" style="font-size:12px; margin-top:10px" @click="assignService">Assign</button>
     </div>
 </div>
