--- a/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
+++ b/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
     <div class="panel-heading">
-        <div v-if="role === 2" class="adsBanner slideshow-container">
+        <!-- <div v-if="role === 2" class="adsBanner slideshow-container"> -->
 
             <!-- Full-width images with number and caption text -->
             <!-- <div class="mySlides fade">
@@ -23,7 +23,46 @@
 
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a> -->
+        <!-- </div> -->
+
+
+
+        <div class="adsBanner home-banner-block">
+            <div class="slideshow-container">
+
+                <!-- Full-width images with number and caption text -->
+                <div class="mySlides fade">
+                    <div class="numbertext">1 / 3</div>
+                    <img src="dist/img/img1.jpeg" style="width:100%">
+                    <div class="text">Caption Text</div>
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">2 / 3</div>
+                    <img src="dist/img/img2.jpeg" style="width:100%">
+                    <div class="text">Caption Two</div>
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">3 / 3</div>
+                    <img src="dist/img/img3.jpeg" style="width:100%">
+                    <div class="text">Caption Three</div>
+                </div>
+
+                <!-- Next and previous buttons -->
+                <a class="prev prev-ing" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next prev-ing" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+
+            <!-- The dots/circles -->
+            <div class="banner-dots">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+            </div>
         </div>
+
+        
     </div>
     <div class="panel-body addBg" v-if="role === 2">
         <div class="row">
