--- a/WebClient/src/content/scssStyles.scss
+++ b/WebClient/src/content/scssStyles.scss
@@ -2496,15 +2496,21 @@ textarea {
     display: flex;
     padding: 0px;
     div{
-        border:1px solid $headerColor;
+  
         background-color: white;
         color:$headerColor;
-        margin:6px;
         padding: 4px 18px;
-        border-radius: 50px;
-
+        
+        // font-weight: 600;
+        // border-radius: 5px;
+        cursor: pointer;
         &.active{
-            background-color: $headerColor;
+            // background-color: #22ACF3;
+            // border:1px solid $headerColor;
+            background-color: #22ACF3;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+            font-weight: bold;
             a{
                 color:white !important;
                 
@@ -12917,10 +12923,10 @@ body {
 
   /* Ui styles */
 
- .adsBanner{
-     height: 20vh;
-     background: #ddd;
- }
+.adsBanner{
+  position: relative;
+  height: 25vh;
+}
  .services{
      .serviceCards{
         & .sercard{
@@ -13083,13 +13089,53 @@ a{
   max-width: 1000px;
   position: relative;
   margin: auto;
-  width: 55%;
+//   width: 55%;
 }
 
 /* Hide the images by default */
 .mySlides {
   display: none;
+  img{
+      height:30vh;
+  }
 }
+
+// .banner-dots{
+//     text-align: center;
+//     position: absolute;
+//     bottom: 0px;
+//     left: 0;
+//     right: 0;
+//     .dot{
+//         cursor: pointer;
+//       height: 10px;
+//       width: 10px;
+//       margin: 0 2px;
+//       background-color: #bbb;
+//       border-radius: 50%;
+//       display: inline-block;
+//       transition: background-color 0.6s ease;
+//     }
+//     .prev, .next {
+//         cursor: pointer;
+//         position: absolute;
+//         top: 50%;
+//         width: auto;
+//         margin-top: -22px;
+//         padding: 16px;
+//         color: #FAC705;
+//         font-weight: bold;
+//         font-size: 18px;
+//         background:  #1C3957;
+//         transition: 0.6s ease;
+//         border-radius: 0 3px 3px 0;
+//         user-select: none;
+//       }
+//       .active, .dot:hover {
+//         background-color: #FAC705;
+//       }
+// }
+
 
 /* Next & previous buttons */
 .prev, .next {
@@ -13114,9 +13160,9 @@ a{
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
+// .prev:hover, .next:hover {
+//   background-color: rgba(0,0,0,0.8);
+// }
 
 /* Caption text */
 .text {
@@ -13364,7 +13410,61 @@ a{
     left: 23%;
     top: 3px;
     margin: 0px;
+    width:32%;
 }
+
+.home-banner-block{
+    .banner-dots{
+            text-align: center;
+            position: absolute;
+            bottom: 0px;
+            left: 0;
+            right: 0;
+            .dot{
+                cursor: pointer;
+              height: 10px;
+              width: 10px;
+              margin: 0 2px;
+              background-color: #bbb;
+              border-radius: 50%;
+              display: inline-block;
+              transition: background-color 0.6s ease;
+            }
+            .mySlides{
+           
+            }
+              .active, .dot:hover {
+                background-color: #FAC705;
+              }
+        }
+        .prev-ing{
+            background: $headerColor;
+            color: $hearerIconColour !important;
+            padding:10px;
+            opacity: 0.5;
+        }
+        .text{
+            font-size: 12px;
+        }
+    
+}
+
+
+// .prev-img, .next-img {
+//     cursor: pointer;
+//     position: absolute;
+//     top: 50%;
+//     width: auto;
+//     margin-top: -22px;
+//     padding: 16px;
+//     color: #FAC705 !important;
+//     font-weight: bold;
+//     font-size: 18px;
+//     background:  #1C3957 !important;
+//     transition: 0.6s ease;
+//     border-radius: 0 3px 3px 0;
+//     user-select: none;
+//   }
 
 @media only screen and (min-width: 600px) {
     .inline-logo{
@@ -13372,5 +13472,6 @@ a{
         left:43%; 
         top:5px; 
         margin:0px;
+        width:150px;
     }
   }
