--- a/WebClient/src/components/homeModule/adminHomePageComponent/adminHomePageComponent.template.html
+++ b/WebClient/src/components/homeModule/adminHomePageComponent/adminHomePageComponent.template.html
@@ -69,7 +69,7 @@
                                         </thead>
                                         <tbody>
                                             <tr v-for="service in services" style="height: 50px;">
-                                                <td>
+                                                <td style="width:250px">
                                                     <assignPersonComponent :service="service"
                                                         :updateServicePerson="updateServicePerson">
                                                     </assignPersonComponent>
